# ExampleRepo

./: CMakeLists.txt  environment.yml  environment_win.yml
.github/workflows/: ci_clang  ci_clang.yml  ci_gcc.yml  ci_msvc.yml
tests/: test_example.cpp
